# robo_ws

./: .gitignore  9-transitions  CODEBASE_DOCUMENTATION.md  HARDWARE_INTERFACE_GUIDE.md  Hardware_Interfacing_Detailed_Guide.md  README.md  how to run.md
src/arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_moveit_config/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pick_place_arm.ros2_control.xacro  pick_place_arm.srdf  pick_place_arm.urdf.xacro  ros2_controllers.yaml
src/arm_moveit_config/launch/: unified_gz_moveit.launch.py
src/pick_place_arm/: CMakeLists.txt  package.xml
src/pick_place_arm/config/: gripper_params.yaml  ros2_control.yaml
src/pick_place_arm/launch/: gazebo.launch.py  gz_with_robot.launch.py  test_vision.launch.py  unified_gz_moveit.launch.py
src/pick_place_arm/meshes/: base_link.STL  l1.STL  l2.STL  l3.STL  l4.STL  l5.STL  l6.STL  l7l.STL  l7r.STL
src/pick_place_arm/models/basket_blue/: model.config  model.sdf
src/pick_place_arm/models/basket_green/: model.config  model.sdf
src/pick_place_arm/models/basket_red/: model.config  model.sdf
src/pick_place_arm/models/plate_blue/: model.config  model.sdf
src/pick_place_arm/models/plate_green/: model.config  model.sdf
src/pick_place_arm/models/plate_green/meshes/: model.mtl
src/pick_place_arm/models/plate_red/: model.config  model.sdf
src/pick_place_arm/models/plate_stand/: model.config  model.sdf
src/pick_place_arm/models/test_box/: model.config  model.sdf
src/pick_place_arm/scripts/: camera_calibration.py  contact_monitor.py  controller_starter.py  debug_detach.py  demo_pick_place.py  gazebo_attachment.py  gripper_attach.py  gripper_attachment_node.py  ik_debugger.py  ik_utils.py  initial_detach.py  joint_space_pick_place.py  manual_control_and_viz.py  manual_detach.py  moveit_pick_place.py  object_detector.py  pick_and_place.py  pick_and_place_cartesian.py  pick_and_place_contact.py  pick_and_place_demo.py  pick_and_place_moveit.py  pick_and_place_simple.py  pose_to_tf_relay.py  pre_detach_boxes.py  rviz_interactive_control.py  rviz_model_visualizer.py  test_gripper.py  test_ik_positions.py  vision_interactive_demo.py  vision_pick_place.py  vision_pick_place_node.py  vision_utils.py  visualize_workspace.py  wait_and_spawn_controllers.py
src/pick_place_arm/urdf/: arm.urdf.xacro
src/pick_place_arm/worlds/: my_world.sdf
src/pick_place_hardware/: CMakeLists.txt  package.xml  pick_place_hardware_plugin.xml
src/pick_place_hardware/config/: fake_hardware.ros2_control.xacro  ros2_control.yaml
src/pick_place_hardware/docs/: monitoring_guide.md  rviz_troubleshooting.md
src/pick_place_hardware/include/pick_place_hardware/: fake_robot_hardware.hpp
src/pick_place_hardware/launch/: test_fake_hardware.launch.py
src/pick_place_hardware/scripts/: monitor_hardware_interface.py  test_controller.py  test_moveit_integration.py
src/pick_place_hardware/src/: fake_robot_hardware.cpp
src/real_hardware_integration/: MASTER_AI_PROMPT.md  README.md  hardware_specs_form.html  real_hardware_execution_prompt.md
src/real_hardware_integration/docs/: hardware_specs_form.md
