<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_place_arm</name>
  <version>0.0.1</version>
  <description>Package for pick and place arm using ROS 2 and Gazebo Fortress</description>

  <maintainer email="raj@todo.todo">raj</maintainer>
  <license>Apache-2.0</license>

    <!-- Build Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>yaml_cpp_vendor</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>ros2_controllers</build_depend>
  <build_depend>pluginlib</build_depend>       <!-- NEW -->

  <!-- Execution Dependencies -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>     <!-- NEW -->
  <exec_depend>ros_gz_sim</exec_depend>       <!-- Use instead of gazebo_ros -->

  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    
  </export>
</package>
